compiler/testData/diagnostics/tests/annotations/noNameProperty.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
annotation class Ann(val x: Int, val<!SYNTAX!><!> )